# automation-box

./: .gitignore  README.md  config.android.yaml  config.example.yaml  config.ios.yaml  config.yaml  main.py  main_android.py  main_ios.py  pom.xml  pyproject.toml  readYml.yml  setup.py
android_smart_monkey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
doc/: junit5.md  配置Allure报告.md
doc/junit5/: annotations.md  definitions.md  description.md
doc/others/: api-testcase-gen.md  api-testing.md
doc/playwright/: Playwright-CodeGen.md  Playwright-Tracing.md  Playwright-guide-zh_CN.md
docs/: RUNTIME.md  USER_GUIDE_CN.md  iOS接入方案（直连WDA_URL）.md  主线算法与策略详解.md  主线详细设计.md  使用指南.md  使用指南（当前主线）.md  使用指南（非自动化）.md  参数调优手册（按目标）.md  算法优化与Crash专项增强方案.md  统一运行说明.md  能力补齐总设计.md  详细设计.md
projects/android-smart-monkey/: README.md  config.v3.example.yaml  config.yaml.example  main.py  main_current.py  main_mainline.py  main_orchestrated.py  main_recommended.py  main_recommended_v2.py  main_stateful.py  main_v2.py  main_v3.py  (+7 more)
smart_monkey/: __init__.py  app.py  app_runtime.py  app_watchdog.py  config.py  logging_utils.py  models.py  platform_profiles.py  runner.py  runtime_config.py
tests/: test_coverage_benchmark.py  test_extractor.py  test_learning_bandit.py  test_login_bootstrap.py  test_parser.py  test_recovery_strategy.py  test_recovery_validator.py  test_robust_adb_driver.py  test_runtime_app.py  test_runtime_config_learning.py  test_runtime_recovery.py  test_scorer.py  test_sidecar_monkey_service.py  test_watchdog.py  test_wda_client.py  test_wda_driver.py
(+140 files in other folders)
