[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-smart-monkey"
version = "0.1.0"
description = "A state-aware smart monkey framework scaffold for Android app testing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "loguru>=0.7.2",
]

[tool.setuptools]
packages = ["smart_monkey", "smart_monkey.device", "smart_monkey.action", "smart_monkey.state"]
